--- a/January_2023/11_01_2023/style.css
+++ b/January_2023/11_01_2023/style.css
@@ -3,22 +3,32 @@
     padding: 0;
     box-sizing: border-box;
     max-width: 1200px;
+    background:  #95aba0;
 }
 
 .root {
+    align-items: center;
     margin: 10px;
-    padding: 10px;
+    padding: 10px 0;
     height: 150px;
-    max-width: 1200px;
+    max-width: 900px;
 }
 
+.form_txt {
+    text-align: center;
+    font-size: 22px;
+    padding: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 .form {
+    
     padding: 10px;
     height: 100px;
     border: 2px solid black;
     border-radius: 2px;
     max-width: 1200px;
-    background-color: rgba(236, 253, 237, 0.716);
+    /* background-color: rgba(236, 253, 237, 0.716); */
+    background: linear-gradient(-45deg, #95aba0, #d6fae8) ;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     display: flex;
     justify-content: space-around;
@@ -26,14 +36,16 @@
 }
 
 .form input {
-    height: 30px;
-    width: 200px;
+    height: 50px;
+    width: 250px;
     border: 2px solid black;
     background-color: rgba(222, 251, 217, 0.537);
+    border-radius: 5px;
 }
 
 .btn {
     height: 30px;
+    cursor: pointer;
     width: 70px;
     border-radius: 3px;
     border-color: #2acc4378;
@@ -49,30 +61,32 @@
 }
 
 .product {
-    margin: 10px 0;
+    margin: 5px 10px ;
     padding: 10px;
     height: 200px;
     border: 2px solid black;
-    border-radius: 2px;
-    max-width: 1200px;
-    background-color: rgba(236, 253, 237, 0.716);
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 0 15px ;
+    max-width: 900px;
+    /* background-color: rgba(236, 253, 237, 0.716); */
+    background: linear-gradient(-45deg, #95aba0, #d6fae8) ;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 5);
     color: rgba(27, 27, 27, 0.684);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.product .description {
-    width: 85%;
+.description {
+    width: 95%;
 }
 
-.product .post_title {
-    font: 16px;
+.post_title {
+    font-size: 24px;
     font-weight: 600;
 }
 
 .delete_btn {
+    cursor: pointer;
     margin: 5px;
     height: 30px;
     width: 70px;
@@ -88,23 +102,25 @@
     color: black;
 }
 
-
-.product .post_price {
-    font: 20px;
+ .post_price {
+    font-size: 22px;
+    color: rgb(10, 110, 35);
 }
 
-.product .post_desc {
-    font: 12px;
-    font: italic;
+.post_desc {
+    font-size: 18px;
+    font-style: italic;
 }
 
-.product .img {
+.img {
     height: 100%;
-    border-radius: 2px;
+    border-radius: 5px;
     border: 2px solid black;
 }
 
-
+.box {
+    margin: 40px 0;
+}
 
 
 
