--- a/November_2022/23_11_2022/style.css
+++ b/November_2022/23_11_2022/style.css
@@ -6,6 +6,7 @@
     max-width: 800px;
     box-sizing: border-box;
     font-family: 'Open Sans', Helvetica, sans-serif;
+    background: rgb(173, 224, 241);
 }
 .root {
     display: inline;
@@ -21,7 +22,7 @@
     padding:  30px;
     flex-direction: column;
     flex-wrap: nowrap;
-}
+} 
 .add_form input {
     margin: 10px 0;
     padding: 8px;
@@ -54,12 +55,23 @@
     border: 1px solid black;
     border-radius: 5px;
     box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.5);
+    background: linear-gradient(-45deg, rgb(98, 98, 255), white);
 }
 .title {
     font-size: 30px;
     text-transform: uppercase;
+    background: rgba(0, 0, 0, 0);
 }
 .total p {
     padding: 5px;
     margin: 5px;
+    background: rgba(0, 0, 0, 0);
+}
+
+.price {
+    background: rgba(0, 0, 0, 0);
+}
+
+.amount {
+    background: rgba(0, 0, 0, 0);
 }
