--- a/January_2023/11_01_2023/style.css
+++ b/January_2023/11_01_2023/style.css
@@ -62,7 +62,8 @@
 .product {
     margin: 5px 10px ;
     padding: 10px;
-    height: 200px;
+    /* height: 200px;
+    overflow: scroll; */
     border: 2px solid black;
     border-radius: 0 15px ;
     max-width: 900px;
@@ -80,8 +81,9 @@
 }
 
 .description {
-    width: 95%;
-    
+    margin: 10px;
+    padding: 10px;
+    width: 95%; 
 }
 
 .post_title {
@@ -113,13 +115,14 @@
 }
 
 .post_desc {
-    font-size: 20px;
+    overflow: scroll;
+    font-size: 18px;
     font-style: italic;
 
 }
 
 .img {
-    height: 100%;
+    height: 185px;
     border-radius: 5px;
     border: 2px solid black;
 }
